# CursorExtend

./: .eslintrc.json  .gitignore  DeepResearchAgent.ipynb  Deep_Research.ipynb  README.md  TODO.md  agent.py  cli.js  env.example.js  index.js  package-lock.json  package.json  pyproject.toml  server.js  tsconfig.json
src/: index.ts
src/commands/: analyze.ts
src/commands/analyze/: code.ts
src/commands/setup/: config.ts
src/tools/: agent.ts  codeAnalyzer.ts
