[project]
name = "cursorextend"
version = "0.1.0"
description = "A powerful agentic tool for code generation and analysis"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "langchain",
    "langgraph",
    "openai",
    "rich",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
] 