[project]
name = "cursorextend"
version = "0.1.0"
description = "A powerful agentic tool for code generation and analysis"
authors = [
    {name = "Flight505", email = "jesper_vang@me.com"},
]
date = "2025"
dependencies = [
    "langchain",
    "langgraph",
    "openai",
    "rich",
    "python-dotenv",
    "pydantic",
    "tavily-python",
    "langchain-community",
    "langchain-openai",
]
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]